# =============
# Package Info
# =============
[package]
name = "rustic-io"
version = "0.2.0"
authors = ["nathanrsizmore@gmail.com"]
description = "A simple Websocket server library for text and binary messaging"
respository = "https://github.com/nathansizemore/rustic-io"
readme = "README.md"
keywords = ["websocket", "web", "socket"]
license = "MIT"


[lib]
name = "rustic-io"
path = "src/rustic_io.rs"

# =============
# Dependencies
# =============
[dependencies.rust-crypto]
rust-crypto = "~0.1.2"
#git = "https://github.com/dagenix/rust-crypto"

# ===============
# Build Profiles
# ===============

# cargo build
[profile.dev]
opt-level = 0
debug = true

# cargo build --release
[profile.release]
opt-level = 3
debug = false

# cargo test
[profile.test]
opt-level = 0
debug = true

# cargo bench
[profile.bench]
opt-level = 3
debug = false

# cargo doc
[profile.doc]
opt-level = 0
debug = true